WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195603
[ContentChangeObserver] Reset state when touchStart does not turn into click.
https://bugs.webkit.org/show_bug.cgi?id=195603
Summary
[ContentChangeObserver] Reset state when touchStart does not turn into click.
alan
Reported
2019-03-11 21:13:47 PDT
ssia
Attachments
Patch
(3.69 KB, patch)
2019-03-11 21:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.70 KB, patch)
2019-03-12 10:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.62 KB, patch)
2019-03-12 16:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-03-11 21:14:08 PDT
<
rdar://problem/48796582
>
alan
Comment 2
2019-03-11 21:29:29 PDT
Created
attachment 364349
[details]
Patch
alan
Comment 3
2019-03-12 10:08:03 PDT
Created
attachment 364398
[details]
Patch
alan
Comment 4
2019-03-12 16:33:58 PDT
Created
attachment 364470
[details]
Patch
WebKit Commit Bot
Comment 5
2019-03-12 17:12:21 PDT
Comment on
attachment 364470
[details]
Patch Clearing flags on attachment: 364470 Committed
r242834
: <
https://trac.webkit.org/changeset/242834
>
WebKit Commit Bot
Comment 6
2019-03-12 17:12:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug