[ContentChangeObserver] Reset state when touchStart does not turn into click. https://bugs.webkit.org/show_bug.cgi?id=195603 <rdar://problem/48796582>

Reviewed by Simon Fraser.

Add reset() function to assert and reset the current state.

* page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::willNotProceedWithClick):
(WebCore::ContentChangeObserver::adjustObservedState):
* page/ios/ContentChangeObserver.h:


Canonical link: https://commits.webkit.org/209961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242834 268f45cc-cd09-0410-ab3c-d52691b4dbfc